compatible with jspm bundle

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -5,9 +5,11 @@ html
 
         //- link(rel='stylesheet' href='styles.css')
 
+    body
+
+        my-app Loading...
+
         script(src='jspm_packages/system.js')
         script(src='config.js')
+        script(src='bundle.js')
         script(src='starter.js')
-
-    body
-        my-app Loading...
